# ocri-vm-fix

./: README ON FIRST-LOGIN.txt  runner.sh
AA_DEVL/ws_example_foxy/src/simple_package_template2/: CMakeLists.txt  package.xml
AA_DEVL/ws_example_foxy/src/simple_package_template2/launch/: myChatter.launch.xml  show_nodes.launch.xml
AA_DEVL/ws_example_noetic/src/simple_package_template/: CMakeLists.txt  package.xml
AA_DEVL/ws_example_noetic/src/simple_package_template/config/: node_graph.perspective
AA_DEVL/ws_example_noetic/src/simple_package_template/launch/: myChatter.launch  show_nodes.launch
