<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>simple_package_template2</name>
    <version>0.0.1</version>
    <description>
        <p>A sample package template for ROS 2</p>
        <p>
            The description is used to summarize the package.
        </p>
        <p>
            <b>Specifications</b>
        </p>
        <ul>
            <li>- Hardware xyz</li>
        </ul>
    </description>
    <author>ROS Student</author>
    <maintainer email="student@example.com">ROS Student</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
        
    <export>
    	<build_type>ament_cmake</build_type>
    </export>
</package>
