<?xml version="2.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>simple_package_template</name>
    <version>0.0.1</version>
    <description>
        <p>A sample package template for ROS 1</p>
        <p>
            The description is used to summarize the package.
        </p>
        <p>
            <b>Specifications</b>
        </p>
        <ul>
            <li>- Hardware xyz</li>
        </ul>
    </description>
    <author>ROS Student</author>
    <maintainer email="student@example.com">ROS Student</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <test_depend>roslaunch</test_depend>
    
    <exec_depend>rospy_tutorials</exec_depend>
</package>
